Fix logo overlapping content on mobile

--- a/assets/css/partials/theme/_header.scss
+++ b/assets/css/partials/theme/_header.scss
@@ -6,15 +6,7 @@
   right: 0;
   z-index: 100;
   background: $gray;
-
-  @include media('<desktop') {
-    @at-root .scrolled & {
-      box-shadow: 0 2px 0 0 $border-color;
-    }
-  }
-  @include media('>=desktop') {
-    border-bottom: 2px solid $border-color;
-  }
+  border-bottom: 2px solid $border-color;
 
   .container-fluid {
     padding-left: 0;
@@ -43,22 +35,22 @@
     }
 
     @include media('<desktop') {
-      float: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       width: 100%;
-      @include clearfix();
     }
 
     @include media('>=desktop') {
       width: 28.03%;
 
       @at-root .scrolled & {
-        /* width: 38.67%; */
         .navbar-brand {
           font-weight: normal;
           padding-top: 10px;
           padding-bottom: 10px;
           font-size: 16px;
-          line-height: 32px;
+          line-height: 2;
           font-family: "NimbusSanL", Arial, Helvetica, sans-serif;
         }
 
@@ -72,21 +64,18 @@
 
   .navbar-brand {
     position: relative;
-    padding: 10px;
-    margin: 0;
-    width: 130px;
     height: auto;
-    font: 600 16px/32px $poppins;
+    margin: 0;
+    padding: 10px;
+    font: 600 16px/2 $poppins;
     text-transform: uppercase;
 
     @include media('<desktop') {
-      font-weight: 400;
+      padding: $grid-gutter-width-mobile/2;
       font-size: 26px;
-      line-height: 1em;
+      line-height: 1;
       font-family: $nimbus;
-      padding-left: $grid-gutter-width-mobile/2;
-      padding-right: $grid-gutter-width-mobile/2;
-      padding-bottom: 14px;
+      font-weight: 400;
     }
 
     @include media('>=desktop') {
@@ -116,7 +105,7 @@
     &::after {
       content: '';
       position: absolute;
-      top: 0;
+      top: -3px;
       left: 0;
       right: 0;
       z-index: 2;
@@ -125,7 +114,8 @@
 
     &::before {
       background: $gray;
-      height: 81px;
+      height: 64px;
+
       @include media('>=desktop') {
         height: 145px;
         border: solid $border-color;
@@ -134,16 +124,19 @@
     }
 
     &::after {
-      width: 190px;
       height: 92px;
-      background: url('#{$images}logo.svg') no-repeat;
-      background-size: 100% auto;
+      background-image: url('#{$images}logo.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      background-origin: content-box;
+      box-sizing: content-box;
+
       @include media('<desktop') {
-        width: 109px;
-        height: 54px;
-        margin-top: 13px;
-        margin-left: 12px;
+        height: 40px;
+        padding: 12px;
       }
+
       @include media('>=desktop') {
         margin-top: 23px;
         margin-left: auto;
@@ -151,21 +144,8 @@
       }
     }
 
-    @at-root .scrolled & {
-      @include media('<desktop') {
-        width: 130px;
-      }
-
-      &::before,
-      &::after {
-        @include translate(0, -200%);
-      }
-    }
-
-    @at-root .opened-menu & {
-      @include media('<desktop') {
-        width: 130px;
-
+    @include media('>=desktop') {
+      @at-root .scrolled & {
         &::before,
         &::after {
           @include translate(0, -200%);
@@ -175,15 +155,19 @@
   }
 
   .navbar-toggle {
-    margin: 9px 12px 5px 10px;
     width: 32px;
     height: 32px;
-    padding: 5px 2px;
+    margin: $grid-gutter-width-mobile/2;
+    color: $dark-gray;
     border: 0;
     border-radius: 0;
-    color: $dark-gray;
+
     @include media('<desktop') {
-      display: block;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .icon-bar {
@@ -227,20 +211,21 @@
   @include media('<desktop') {
     @include display-flex();
     @include flex-direction(column);
-    position: fixed;
+
     z-index: 120;
-    top: 50px;
+    position: fixed;
+    top: 64px;
     right: 0;
     bottom: 0;
     width: 100%;
-    padding: 0;
     margin-right: -100%;
-    float: none;
-    overflow-y: auto;
+    padding: 0;
     background: $gray;
-    text-align: left;
     font-size: 26px;
     line-height: 35px;
+    text-align: left;
+    float: none;
+    overflow-y: auto;
     transition: margin 0.3s ease;
 
     @at-root .opened-menu & {
@@ -250,10 +235,7 @@
 
   @include media('>=desktop') {
     width: calc(100% - 28.45%);
-
-    @at-root .scrolled & {
-      width: 61.33%;
-    }
+    @at-root .scrolled & { width: 61.33%; }
   }
 
   .base {
