--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -5921,13 +5921,8 @@ select:focus {
   left: 0;
   right: 0;
   z-index: 100;
-  background: #e6e6e6; }
-  @media (max-width: 991px) {
-    .scrolled #header {
-      box-shadow: 0 2px 0 0 #222; } }
-  @media (min-width: 992px) {
-    #header {
-      border-bottom: 2px solid #222; } }
+  background: #e6e6e6;
+  border-bottom: 2px solid #222; }
   #header .container-fluid {
     padding-left: 0;
     padding-right: 0;
@@ -5948,45 +5943,37 @@ select:focus {
       display: none; }
     @media (max-width: 991px) {
       #header .navbar-header {
-        float: none;
-        width: 100%; }
-        #header .navbar-header:before, #header .navbar-header:after {
-          content: " ";
-          display: table; }
-        #header .navbar-header:after {
-          clear: both; } }
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%; } }
     @media (min-width: 992px) {
       #header .navbar-header {
         width: 28.03%; }
-        .scrolled #header .navbar-header {
-          /* width: 38.67%; */ }
-          .scrolled #header .navbar-header .navbar-brand {
-            font-weight: normal;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            font-size: 16px;
-            line-height: 32px;
-            font-family: "NimbusSanL", Arial, Helvetica, sans-serif; }
-          .scrolled #header .navbar-header strong {
-            font-weight: normal;
-            margin-right: 3px; } }
+        .scrolled #header .navbar-header .navbar-brand {
+          font-weight: normal;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          font-size: 16px;
+          line-height: 2;
+          font-family: "NimbusSanL", Arial, Helvetica, sans-serif; }
+        .scrolled #header .navbar-header strong {
+          font-weight: normal;
+          margin-right: 3px; } }
   #header .navbar-brand {
     position: relative;
-    padding: 10px;
-    margin: 0;
-    width: 130px;
     height: auto;
-    font: 600 16px/32px "Poppins", sans-serif;
+    margin: 0;
+    padding: 10px;
+    font: 600 16px/2 "Poppins", sans-serif;
     text-transform: uppercase; }
     @media (max-width: 991px) {
       #header .navbar-brand {
-        font-weight: 400;
+        padding: 16px;
         font-size: 26px;
-        line-height: 1em;
+        line-height: 1;
         font-family: "NimbusSanL", Arial, Helvetica, sans-serif;
-        padding-left: 16px;
-        padding-right: 16px;
-        padding-bottom: 14px; } }
+        font-weight: 400; } }
     @media (min-width: 992px) {
       #header .navbar-brand {
         width: 100%;
@@ -6007,62 +5994,56 @@ select:focus {
     #header .navbar-brand::before, #header .navbar-brand::after {
       content: '';
       position: absolute;
-      top: 0;
+      top: -3px;
       left: 0;
       right: 0;
       z-index: 2;
       transition: all 0.3s ease; }
     #header .navbar-brand::before {
       background: #e6e6e6;
-      height: 81px; }
+      height: 64px; }
       @media (min-width: 992px) {
         #header .navbar-brand::before {
           height: 145px;
           border: solid #222;
           border-width: 0 2px 2px 0; } }
     #header .navbar-brand::after {
-      width: 190px;
       height: 92px;
-      background: url("../images/logo.svg") no-repeat;
-      background-size: 100% auto; }
+      background-image: url("../images/logo.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      background-origin: content-box;
+      box-sizing: content-box; }
       @media (max-width: 991px) {
         #header .navbar-brand::after {
-          width: 109px;
-          height: 54px;
-          margin-top: 13px;
-          margin-left: 12px; } }
+          height: 40px;
+          padding: 12px; } }
       @media (min-width: 992px) {
         #header .navbar-brand::after {
           margin-top: 23px;
           margin-left: auto;
           margin-right: auto; } }
-    @media (max-width: 991px) {
-      .scrolled #header .navbar-brand {
-        width: 130px; } }
-    .scrolled #header .navbar-brand::before, .scrolled #header .navbar-brand::after {
-      -webkit-transform: translate(0, -200%);
-      -ms-transform: translate(0, -200%);
-      -o-transform: translate(0, -200%);
-      transform: translate(0, -200%); }
-    @media (max-width: 991px) {
-      .opened-menu #header .navbar-brand {
-        width: 130px; }
-        .opened-menu #header .navbar-brand::before, .opened-menu #header .navbar-brand::after {
-          -webkit-transform: translate(0, -200%);
-          -ms-transform: translate(0, -200%);
-          -o-transform: translate(0, -200%);
-          transform: translate(0, -200%); } }
+    @media (min-width: 992px) {
+      .scrolled #header .navbar-brand::before, .scrolled #header .navbar-brand::after {
+        -webkit-transform: translate(0, -200%);
+        -ms-transform: translate(0, -200%);
+        -o-transform: translate(0, -200%);
+        transform: translate(0, -200%); } }
   #header .navbar-toggle {
-    margin: 9px 12px 5px 10px;
     width: 32px;
     height: 32px;
-    padding: 5px 2px;
+    margin: 16px;
+    color: #222;
     border: 0;
-    border-radius: 0;
-    color: #222; }
+    border-radius: 0; }
     @media (max-width: 991px) {
       #header .navbar-toggle {
-        display: block; } }
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; } }
     #header .navbar-toggle .icon-bar {
       position: relative;
       width: 28px;
@@ -6102,20 +6083,20 @@ select:focus {
       -moz-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column;
-      position: fixed;
       z-index: 120;
-      top: 50px;
+      position: fixed;
+      top: 64px;
       right: 0;
       bottom: 0;
       width: 100%;
-      padding: 0;
       margin-right: -100%;
-      float: none;
-      overflow-y: auto;
+      padding: 0;
       background: #e6e6e6;
-      text-align: left;
       font-size: 26px;
       line-height: 35px;
+      text-align: left;
+      float: none;
+      overflow-y: auto;
       transition: margin 0.3s ease; }
       .opened-menu #main-nav {
         margin-right: 0; } }
